--- a/style.css
+++ b/style.css
@@ -309,37 +309,47 @@ body {
 }
 
 /* Loader Background */
-
-body{
+#loader {
+  position: fixed;
+  top: 0;
+  left: 0;
   width:100%;
-  height:100vh;
+  height:100%;
   background:#f3e5d0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
-.book{
-  top: 50%;
-  transform: translateY(-50%);
-  position:relative;
-  margin:0 auto;
-  border:5px solid $clouds;
-  width:100px;
-  height:60px;
+
+.book {
+  position: relative;
+  width: 100px;
+  height: 60px;
+  perspective: 200px;
 }
-.book__page{
+
+.book__page {
   position:absolute;
   left:50%;
-  top:-5px;
-  margin:0 auto;
+  top:0;
+  transform-origin: 0% 50%;
+  width:50px;
+  height:60px;
+  background:#f3e5d0;
   border-top:5px solid #8b5e3c;
   border-bottom:5px solid #8b5e3c;
   border-right:5px solid #8b5e3c;
-  background:#f3e5d0;
-  width:50px;
-  height:60px;
-  transform-origin:0% 50%;
-  animation:flip 1.2s infinite linear;
-  animation-fill-mode:forwards;
+  animation: flip 1.2s infinite linear;
+}
 
-/* Flickering Text **/
+@keyframes flip {
+  0% { transform: rotateY(0deg); }
+  100% { transform: rotateY(-180deg); }
+}
+
+/* Flickering Text */
 .loader-text {
   margin-top: 1rem;
   font-family: 'Caveat', cursive;
