--- a/style.css
+++ b/style.css
@@ -330,7 +330,7 @@ body {
   transform: translateY(-50%);
   position: relative;
   margin: 0 auto;
-  border: 5px solid #ecf0f1;
+  border: 5px solid #e9d8bc;
   width: 100px;
   height: 60px;
 }
@@ -340,10 +340,10 @@ body {
   left: 50%;
   top: -5px;
   margin: 0 auto;
-  border-top: 5px solid #ecf0f1;
-  border-bottom: 5px solid #ecf0f1;
-  border-right: 5px solid #ecf0f1;
-  background: #3498db;
+  border-top: 5px solid #8b5e3c;
+  border-bottom: 5px solid #8b5e3c;
+  border-right: 5px solid #8b5e3c;
+  background: #f3e5d0;
   width: 50px;
   height: 60px;
   transform-origin: 0% 50%;
@@ -368,15 +368,12 @@ body {
   0% {
     transform: perspective(600px) rotateY(0deg);
   }
-  20% {
-    background: #217dbb;
-  }
-  29.9% {
-    background: #217dbb;
+  20%, 29.9% {
+    background: #e0c8a5;
   }
   30% {
     transform: perspective(200px) rotateY(-90deg);
-    background: #3498db;
+    background: #f3e5d0;
   }
   54.999% {
     opacity: 1;
@@ -386,11 +383,11 @@ body {
   }
   60% {
     transform: perspective(200px) rotateY(-180deg);
-    background: #3498db;
+    background: #f3e5d0;
   }
   100% {
     transform: perspective(200px) rotateY(-180deg);
-    background: #3498db;
+    background: #f3e5d0;
   }
 }
 
