--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 
 body {
   font-family: 'Playfair Display', serif;
-  background: url('https://images.unsplash.com/photo-1639162147630-6a4fc251b715?q=80&w=774&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') no-repeat center center fixed;
+  background: url('https://images.unsplash.com/photo-1650211233924-3ebaa7af000e?w=800&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzl8fGxpZ2h0JTIwYWNhZGVtaWF8ZW58MHwxfDB8fHww') no-repeat center center fixed;
   background-size: cover;
   color: #fdfaf5;
   line-height: 1.6;
