--- a/style.css
+++ b/style.css
@@ -315,7 +315,7 @@ body {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: url('https://media.giphy.com/media/xT5LMHxhOfscxPfIfm/giphy.gif') center center no-repeat;
+  background: url('https://media3.giphy.com/media/v1.Y2lkPTZjMDliOTUybnBjeTJoNjUwOXN3aG1vaDBjejc5YTc3eGE3MWF2eTg5dHVuMGtjYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/rdsYO4Wp1Lmouey1Va/giphy.gif') center center no-repeat;
   background-size: cover;
   z-index: 9999;
 
