--- a/style.css
+++ b/style.css
@@ -421,12 +421,12 @@ animation-delay: 0.3s; }
 .observe-pop { 
   opacity: 0; 
   transform: translateY(40px);
-  transition: all 0.6s ease; 
-  will-change: opacity, transform; 
+  transition: all 0.6s ease, 
+  transform 0.6s ease
 }
 
 .observe-pop.visible { 
-  opacity: 1; transform: 
-  translateY(0); 
+  opacity: 1; 
+  transform: translateY(0); 
 }
 
